# zerodev-omni-sdk

./: .gitignore  ARCHITECTURE.md  Makefile  Package.swift  README.md  build.zig  build.zig.zon
.github/workflows/: build-xcframework.yml  publish-go.yml  publish-kotlin.yml  publish-native-libs.yml  publish-python.yml  publish-rust.yml
bindings/go/: Makefile  go.mod
bindings/go/aa/: aa.go  aa_live_test.go  cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go
bindings/go/aa/native/: .gitignore
bindings/go/example/: main.go
bindings/kotlin/: .gitignore  Makefile  build.gradle.kts  settings.gradle.kts
bindings/kotlin/android/: .gitignore  build.gradle.kts
bindings/kotlin/jni/: zerodev_aa_jni.c
bindings/python/: .gitignore  Makefile  pyproject.toml
bindings/python/zerodev_aa/: __init__.py  _ffi.py  account.py  context.py  error.py  signer.py  types.py
bindings/rust/: Cargo.toml  Makefile  build.rs
bindings/rust/src/: error.rs  ffi.rs  lib.rs  types.rs
bindings/rust/tests/: live_test.rs
bindings/swift/: Makefile  Package.swift
examples/: .gitignore  README.md
examples/gasless-transfer/go/: Makefile  go.mod  main.go
examples/gasless-transfer/kotlin/: Makefile  build.gradle.kts  settings.gradle.kts
examples/gasless-transfer/python/: Makefile  main.py
examples/gasless-transfer/rust/: Cargo.toml  Makefile  build.rs
examples/gasless-transfer/swift/: Package.swift
examples/privy-signer/go/: Makefile  go.mod  go.sum  main.go
include/: aa.h
scripts/: build-xcframework.sh
src/: c_api.zig  root.zig
src/core/: bundler.zig  create2.zig  entrypoint.zig  kernel.zig  paymaster.zig  root.zig  userop.zig
src/signers/: custom.zig  json_rpc.zig  local.zig  root.zig  signer.zig
src/transport/: http.zig  json_rpc.zig
src/validators/: Validator.zig  ecdsa.zig  root.zig
test/e2e/: full_pipeline.zig  live_c_api.zig  live_sepolia.zig
test/infra/: harness.mjs  package.json  pnpm-lock.yaml
(+38 files in other folders)
